Add systemd-collector as default for node exporter
otherwise SAP/HA dashboards panels will be empty

--- a/prometheus-exporters-formula/metadata/pillar.example
+++ b/prometheus-exporters-formula/metadata/pillar.example
@@ -4,7 +4,7 @@ proxy_port: 9999
 node_exporter:
   enabled: True
   address: ':9100'
-  args:
+  args: '--collector.systemd'
 
 apache_exporter:
   enabled: False
