Change default to initrd without .gz suffix

--- a/pxe-formula/form.yml
+++ b/pxe-formula/form.yml
@@ -9,7 +9,7 @@ pxe:
   initrd_name:
      $name: 'Initrd Filename'
      $type: text
-     $default: 'initrd.gz'
+     $default: 'initrd'
 
   default_kernel_parameters:
      $name: 'Kernel Command Line Parameters'
