Disable dnssec-validation as bsc#1177790 hotfix

--- a/bind-formula/bind/files/suse/named.conf
+++ b/bind-formula/bind/files/suse/named.conf
@@ -39,7 +39,7 @@ options {
 	# (containing one or more trusted-anchors or a managed-keys clause.
 
 	#dnssec-validation auto;
-	managed-keys-directory "/var/lib/named/dyn/";
+	managed-keys-directory "{{ map.get('named_directory') }}/dyn/";
 
 	# Write dump and statistics file to the log subdirectory.  The
 	# pathenames are relative to the chroot jail.
@@ -111,6 +111,8 @@ options {
     {%- endif %}
 {%- endfor %}
 
+        #disable dnssec-validation as hotfix for bsc#1177790
+        dnssec-validation no;
 };
 
 # The following zone definitions don't need any modification.  The first one
