Add blackbox exporter (#141)
* Add support for blackbox exporter
* Add blackbox Prometheus targets configuration
* Add SSH blackbox status check panel to the Grafana clients dashboard.
* Migrate deprecated Grafana panels: table, stat and gauge.

(cherry picked from commit f02e7035999a2d3f0242dfd0ca85cec5586592ad)

--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -142,3 +142,21 @@ prometheus:
           $default: /etc/prometheus/my-scrape-config.yml
           $help: "JSON or YAML file pattern"
           $required: true
+
+  blackbox_exporter:
+    $type: group
+    $help: Prometheus exporter for blackbox probing of endpoints.
+
+    enabled:
+      $type: boolean
+      $default: False
+
+    address:
+      $type: text
+      $default: ':9115'
+
+    args:
+      $name: "Arguments"
+      $type: text
+      $default: '--config.file /etc/prometheus/blackbox.yml'
+      $help: Please refer to the documentation for available options.
