--- a/prometheus-formula/prometheus/files/prometheus_old.yml
+++ b/prometheus-formula/prometheus/files/prometheus_old.yml
@@ -64,7 +64,7 @@ scrape_configs:
   # --------------------
   - job_name: 'mgr-clients'
     uyuni_sd_configs:
-      - server: https://{{ grains['master'] }}
+      - host: https://{{ grains['master'] }}
         username: {{ sd_username }}
         password: {{ sd_password }}
 {% if targets_tls.enabled %}
@@ -72,32 +72,12 @@ scrape_configs:
       ca_file: {{ targets_tls.ca_certificate }}
       cert_file: {{ targets_tls.client_certificate }}
       key_file: {{ targets_tls.client_key }}
-{% endif %}
     relabel_configs:
-      - source_labels: [__meta_uyuni_exporter]
-        target_label: exporter
-      - source_labels: [__meta_uyuni_groups]
-        target_label: groups
-      - source_labels: [__meta_uyuni_minion_hostname]
-        target_label: hostname
-      - source_labels: [__meta_uyuni_primary_fqdn]
-        regex: (.+)
-        target_label: hostname
-      - source_labels: [hostname, __address__]
-        regex: (.*);.*:(.*)
-        replacement: ${1}:${2}
-        target_label: __address__
-      - source_labels: [__meta_uyuni_metrics_path]
-        regex: (.+)
-        target_label: __metrics_path__
-      - source_labels: [__meta_uyuni_proxy_module]
-        target_label: __param_module
-{% if targets_tls.enabled %}
-      - source_labels: [__meta_uyuni_exporter]
-        regex: apache_exporter|postgres_exporter
-        target_label: __scheme__
-        replacement: http
-        action: replace
+    - source_labels: [exporter]
+      regex: apache_exporter|postgres_exporter
+      target_label: __scheme__
+      replacement: http
+      action: replace
 {% endif %}
 {%- endif %}
 {%- for job, files in salt['pillar.get']('prometheus:scrape_configs', {}).items() %}
