--- a/prometheus-formula/prometheus/files/prometheus_old.yml
+++ b/prometheus-formula/prometheus/files/prometheus_old.yml
@@ -60,32 +60,9 @@ scrape_configs:
   # --------------------
   - job_name: 'mgr-clients'
     uyuni_sd_configs:
-      - server: https://{{ grains['master'] }}
+      - host: https://{{ grains['master'] }}
         username: {{ sd_username }}
         password: {{ sd_password }}
-    relabel_configs:
-      - source_labels: [__meta_uyuni_exporter]
-        target_label: exporter
-      - source_labels: [__address__]
-        replacement: "No group"
-        target_label: groups
-      - source_labels: [__meta_uyuni_groups]
-        regex: (.+)
-        target_label: groups
-      - source_labels: [__meta_uyuni_minion_hostname]
-        target_label: hostname
-      - source_labels: [__meta_uyuni_primary_fqdn]
-        regex: (.+)
-        target_label: hostname
-      - source_labels: [hostname, __address__]
-        regex: (.*);.*:(.*)
-        replacement: ${1}:${2}
-        target_label: __address__
-      - source_labels: [__meta_uyuni_metrics_path]
-        regex: (.+)
-        target_label: __metrics_path__
-      - source_labels: [__meta_uyuni_proxy_module]
-        target_label: __param_module
 {%- endif %}
 {%- for job, files in salt['pillar.get']('prometheus:scrape_configs', {}).items() %}
   - job_name: {{ job }}
@@ -95,6 +72,7 @@ scrape_configs:
         - {{ file }}
 {% endfor %}
 {%- endfor %}
+
   # --------------------
   # Metamonitoring
   # --------------------
@@ -102,6 +80,7 @@ scrape_configs:
     static_configs:
       - targets:
         - {{ grains['fqdn'] }}:9090
+
 {% for job, config in salt['pillar.get']('prometheus:federation').items() %}
 {% if loop.first %}
   # --------------------
