define routes in form.yml as optional

--- a/dhcpd-formula/metadata/form.yml
+++ b/dhcpd-formula/metadata/form.yml
@@ -59,7 +59,8 @@ dhcpd:
           $default: 192.168.1.255
         routers:
           $type: edit-group
-          $minItems: 1
+          $optional: true
+          $minItems: 0
           $prototype:
             $type: text
           $default:
