[grafana] Fix default admin password field name

--- a/grafana-formula/metadata/form.yml
+++ b/grafana-formula/metadata/form.yml
@@ -14,7 +14,7 @@ grafana:
 
   admin_pass:
     $type: password
-    $name: Default admin password
+    $name: Initial admin password
     $required: true
     $disabled: "!formValues.grafana.enabled"
 
