--- a/prometheus-formula/prometheus/files/prometheus.yml
+++ b/prometheus-formula/prometheus/files/prometheus.yml
@@ -160,6 +160,15 @@ scrape_configs:
       - server: https://{{ grains['master'] }}
         username: {{ sd_username }}
         password: {{ sd_password }}
+{% if tls_enabled %}
+{% set tls_config = salt['pillar.get']('prometheus:tls') %}
+{% set ca_file = salt['pillar.get']('prometheus:blackbox_exporter:ca_certificate', '/etc/pki/trust/anchors/RHN-ORG-TRUSTED-SSL-CERT') %}
+    scheme: https
+    tls_config:
+      ca_file: {{ ca_file }}
+      cert_file: {{ tls_config.server_certificate }}
+      key_file: {{ tls_config.serer_key }}
+{% endif %}
     relabel_configs:
       - source_labels: [__meta_uyuni_minion_hostname]
         target_label: hostname
