--- a/prometheus-formula/prometheus/files/prometheus.yml
+++ b/prometheus-formula/prometheus/files/prometheus.yml
@@ -167,7 +167,7 @@ scrape_configs:
     tls_config:
       ca_file: {{ ca_file }}
       cert_file: {{ tls_config.server_certificate }}
-      key_file: {{ tls_config.serer_key }}
+      key_file: {{ tls_config.server_key }}
 {% endif %}
     relabel_configs:
       - source_labels: [__meta_uyuni_minion_hostname]
