--- a/prometheus-formula/prometheus/files/prometheus_old.yml
+++ b/prometheus-formula/prometheus/files/prometheus_old.yml
@@ -107,7 +107,7 @@ scrape_configs:
 {% endif %}
   - job_name: {{ job }}
     honor_labels: true
-    metrics_path: '/{{ job }}'
+    metrics_path: '/federate'
     params:
       'match[]':
         - '{job="prometheus"}'
