--- a/prometheus-formula/prometheus/files/prometheus.yml
+++ b/prometheus-formula/prometheus/files/prometheus.yml
@@ -117,7 +117,7 @@ scrape_configs:
   - job_name: prometheus
     static_configs:
       - targets:
-        - {{ grains['fqdn'] }}:9090
+        - localhost:9090
 {% endif %}
 
 {% for job, config in salt['pillar.get']('prometheus:federation').items() %}
