--- a/pxe-formula/pxe/files/pxecfg.grub2.template
+++ b/pxe-formula/pxe/files/pxecfg.grub2.template
@@ -23,6 +23,8 @@
 {%-   set naming_config = naming_config + " USE_FQDN_MINION_ID=1"  %}
 {%- elif minion_id_naming == 'HWType' %}
 {%-   set naming_config = naming_config + " DISABLE_HOSTNAME_ID=1" %}
+{%- elif minion_id_naming == 'MAC' %}
+{%-   set naming_config = naming_config + " USE_MAC_MINION_ID=1"   %}
 {%- endif %}
 
 default=0
