--- a/pxe-formula/metadata.yml
+++ b/pxe-formula/metadata.yml
@@ -1,5 +1,5 @@
 description:
   PXE settings for branch server
-group: SUSE_manager_for_retail
+group: SUSE_multi-linux_manager_for_retail
 after:
   - branch-network
