Container support for dns and dhcp formulas

--- a/bind-formula/bind/files/suse/named.conf
+++ b/bind-formula/bind/files/suse/named.conf
@@ -18,7 +18,7 @@ options {
 
 	# The directory statement defines the name server's working directory
 
-	directory "{{ map.get('named_directory') }}";
+	directory "{{ map.get('container_named_directory', map.get('named_directory')) }}";
 
 	# enable DNSSEC validation
 	#
@@ -39,7 +39,7 @@ options {
 	# (containing one or more trusted-anchors or a managed-keys clause.
 
 	#dnssec-validation auto;
-	managed-keys-directory "{{ map.get('named_directory') }}/dyn/";
+	managed-keys-directory "{{ map.get('container_named_directory', map.get('named_directory')) }}/dyn/";
 
 	# Write dump and statistics file to the log subdirectory.
 
