--- a/liberate-formula/metadata/form.yml
+++ b/liberate-formula/metadata/form.yml
@@ -6,3 +6,9 @@ liberate:
      $type: boolean
      $help: 'If you want all the packages in your SLL system to have signatures from SUSE, please enable this option'
      $default: false
+
+  install_logos:
+     $name: 'Install logo packages'
+     $type: boolean
+     $help: 'If you want to install the logo packages, please enable this option'
+     $default: false
